--- a/gestion_taxis/public/index.html
+++ b/gestion_taxis/public/index.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+
+<script
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7-nft4ZXhDt6lK_yxs2s3YukSmrG4Jf0&libraries=places"
+  async
+  defer
+></script>
+
+
   </head>
   <body>
     <noscript>
